# TurboQuant.cpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.ko.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  quant.h
.claude/: state.md
.claude/agents/: architect.md  qa.md  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
bench/: compare_llamacpp.sh  kv_quality_bench.sh  ppl_standard.sh  qwen35_validation.cpp  speed_int_vs_float.cpp  test_delta_quant.c  test_multihash_dequant.c
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/bindings/python/: setup.py  test_quantcpp.py
bindings/python/bindings/python/quantcpp/: __init__.py
bindings/python/quantcpp/: __init__.py  _binding.py  cli.py
bindings/python/tests/: test_basic.py
docs/: announcement_en.md  announcement_ko.md  api.md  docker.md  phase3_rlv_challenge.md  prd_v0.5.md  promotion-strategy-v0.12.md  qwen35_validation_results.md  strategy_progressive_kv.md  supported_models.md  wbs_v0.1.md  wbs_v0.5.md
scripts/: test_models.sh
site/: index.html
tests/: test_attention_distribution.cpp  test_edge_cases.cpp  test_int_attention.cpp  test_metal_moe.cpp  test_multiblock.cpp  test_multihash_dim64.cpp  test_neon_scalar.cpp  test_ops.cpp  test_q2_weights.cpp  test_tqm.cpp  test_turbo.cpp  test_turbo_kv_1b.cpp  test_uniform.cpp  test_value.cpp
tools/: debug_compare.c  debug_deltanet.py  phi3_kvcomp_test.c  quant.c  quant_server_unified.c  tq_chat.py  tq_convert.c  tq_realtime_demo.py  tq_run.c
wasm/: build.sh  index.html  quant.js  quant.wasm  quant_wasm.c
(+101 files in other folders)
